FIX: spacing issue for go to top btn

--- a/components/footer/styles.scss
+++ b/components/footer/styles.scss
@@ -113,7 +113,7 @@
   }
 
   .copyright-box {
-    padding: 30px 0px;
+    padding: 30px 0px 150px;
     border-top: 2px solid $border-color;
 
     @include tablet {
